// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useLoadSuite > Calling useLoadSuite should resume from loaded state 1`] = `
IsolateInstance {
  "$type": "Suite",
  "abortController": null,
  "allowReorder": undefined,
  "children": [
    IsolateInstance {
      "$type": "Focused",
      "abortController": null,
      "allowReorder": undefined,
      "children": null,
      "data": {
        "focusMode": "skip",
        "match": [
          "t5",
        ],
        "matchAll": false,
      },
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
      "transient": true,
    },
    IsolateInstance {
      "$type": "Test",
      "abortController": AbortController {},
      "allowReorder": undefined,
      "children": null,
      "data": {
        "fieldName": "t1",
        "severity": "error",
        "testFn": [Function],
        "testStatus": "FAILED",
      },
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
      "transient": undefined,
    },
    IsolateInstance {
      "$type": "Group",
      "abortController": null,
      "allowReorder": undefined,
      "children": [
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t2",
            "message": "t2 message",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t3",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "PASSING",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t4",
            "severity": "warning",
            "testFn": [Function],
            "testStatus": "WARNING",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
      ],
      "data": {
        "groupName": "g1",
        "tests": [],
      },
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
      "transient": undefined,
    },
    IsolateInstance {
      "$type": "Test",
      "abortController": null,
      "allowReorder": undefined,
      "children": null,
      "data": {
        "fieldName": "t5",
        "severity": "error",
        "testFn": [Function],
        "testStatus": "SKIPPED",
      },
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
      "transient": undefined,
    },
    IsolateInstance {
      "$type": "Each",
      "abortController": null,
      "allowReorder": true,
      "children": [
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": "a",
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": "b",
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
      ],
      "data": {
        "tests": [],
      },
      "key": null,
      "keys": {
        "a": IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": "a",
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
        "b": IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": "b",
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
      },
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
      "transient": undefined,
    },
    IsolateInstance {
      "$type": "Reorderable",
      "abortController": null,
      "allowReorder": true,
      "children": null,
      "data": {
        "tests": [],
      },
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
      "transient": undefined,
    },
  ],
  "data": {
    "optional": {},
    "registry_all": Map {
      "t1" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t1",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t2" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t2",
            "message": "t2 message",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              [Circular],
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t3",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "PASSING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t4",
                  "severity": "warning",
                  "testFn": [Function],
                  "testStatus": "WARNING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t3" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t3",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "PASSING",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t2",
                  "message": "t2 message",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t4",
                  "severity": "warning",
                  "testFn": [Function],
                  "testStatus": "WARNING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t4" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t4",
            "severity": "warning",
            "testFn": [Function],
            "testStatus": "WARNING",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t2",
                  "message": "t2 message",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t3",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "PASSING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t5" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": null,
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t5",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "SKIPPED",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t6" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": "a",
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Each",
            "abortController": null,
            "allowReorder": true,
            "children": [
              [Circular],
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "b",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            ],
            "data": {
              "tests": [],
            },
            "key": null,
            "keys": {
              "a": [Circular],
              "b": IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "b",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            },
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": "b",
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Each",
            "abortController": null,
            "allowReorder": true,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "a",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
            ],
            "data": {
              "tests": [],
            },
            "key": null,
            "keys": {
              "a": IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "a",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              "b": [Circular],
            },
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
    },
    "registry_failed": Map {
      "t1" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t1",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t2" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t2",
            "message": "t2 message",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              [Circular],
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t3",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "PASSING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t4",
                  "severity": "warning",
                  "testFn": [Function],
                  "testStatus": "WARNING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t6" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": "a",
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Each",
            "abortController": null,
            "allowReorder": true,
            "children": [
              [Circular],
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "b",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            ],
            "data": {
              "tests": [],
            },
            "key": null,
            "keys": {
              "a": [Circular],
              "b": IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "b",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            },
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": "b",
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Each",
            "abortController": null,
            "allowReorder": true,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "a",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
            ],
            "data": {
              "tests": [],
            },
            "key": null,
            "keys": {
              "a": IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "a",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              "b": [Circular],
            },
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
    },
    "registry_omitted": Map {},
    "registry_passing": Map {
      "t3" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t3",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "PASSING",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t2",
                  "message": "t2 message",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t4",
                  "severity": "warning",
                  "testFn": [Function],
                  "testStatus": "WARNING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
    },
    "registry_pending": Map {},
    "registry_tested": Map {
      "t1" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t1",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t2" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t2",
            "message": "t2 message",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              [Circular],
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t3",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "PASSING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t4",
                  "severity": "warning",
                  "testFn": [Function],
                  "testStatus": "WARNING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t3" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t3",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "PASSING",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t2",
                  "message": "t2 message",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t4",
                  "severity": "warning",
                  "testFn": [Function],
                  "testStatus": "WARNING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t4" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t4",
            "severity": "warning",
            "testFn": [Function],
            "testStatus": "WARNING",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t2",
                  "message": "t2 message",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t3",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "PASSING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t6" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": "a",
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Each",
            "abortController": null,
            "allowReorder": true,
            "children": [
              [Circular],
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "b",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            ],
            "data": {
              "tests": [],
            },
            "key": null,
            "keys": {
              "a": [Circular],
              "b": IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "b",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            },
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "FAILED",
          },
          "key": "b",
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Each",
            "abortController": null,
            "allowReorder": true,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "a",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
            ],
            "data": {
              "tests": [],
            },
            "key": null,
            "keys": {
              "a": IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t6",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": "a",
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              "b": [Circular],
            },
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
    },
    "registry_valid": Map {
      "t3" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t3",
            "severity": "error",
            "testFn": [Function],
            "testStatus": "PASSING",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t2",
                  "message": "t2 message",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t4",
                  "severity": "warning",
                  "testFn": [Function],
                  "testStatus": "WARNING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
      "t4" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t4",
            "severity": "warning",
            "testFn": [Function],
            "testStatus": "WARNING",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t2",
                  "message": "t2 message",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t3",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "PASSING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
    },
    "registry_warning": Map {
      "t4" => Set {
        IsolateInstance {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t4",
            "severity": "warning",
            "testFn": [Function],
            "testStatus": "WARNING",
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": IsolateInstance {
            "$type": "Group",
            "abortController": null,
            "allowReorder": undefined,
            "children": [
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t2",
                  "message": "t2 message",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "FAILED",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              IsolateInstance {
                "$type": "Test",
                "abortController": AbortController {},
                "allowReorder": undefined,
                "children": null,
                "data": {
                  "fieldName": "t3",
                  "severity": "error",
                  "testFn": [Function],
                  "testStatus": "PASSING",
                },
                "key": null,
                "keys": null,
                "output": undefined,
                "parent": [Circular],
                "status": "DONE",
                "transient": undefined,
              },
              [Circular],
            ],
            "data": {
              "groupName": "g1",
              "tests": [],
            },
            "key": null,
            "keys": null,
            "output": undefined,
            "parent": [Circular],
            "status": "DONE",
            "transient": undefined,
          },
          "status": "DONE",
          "transient": undefined,
        },
      },
    },
    "resolver": [Function],
    "tests": [
      IsolateInstance {
        "$type": "Test",
        "abortController": AbortController {},
        "allowReorder": undefined,
        "children": null,
        "data": {
          "fieldName": "t1",
          "severity": "error",
          "testFn": [Function],
          "testStatus": "FAILED",
        },
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": [Circular],
        "status": "DONE",
        "transient": undefined,
      },
      IsolateInstance {
        "$type": "Test",
        "abortController": AbortController {},
        "allowReorder": undefined,
        "children": null,
        "data": {
          "fieldName": "t2",
          "message": "t2 message",
          "severity": "error",
          "testFn": [Function],
          "testStatus": "FAILED",
        },
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": IsolateInstance {
          "$type": "Group",
          "abortController": null,
          "allowReorder": undefined,
          "children": [
            [Circular],
            IsolateInstance {
              "$type": "Test",
              "abortController": AbortController {},
              "allowReorder": undefined,
              "children": null,
              "data": {
                "fieldName": "t3",
                "severity": "error",
                "testFn": [Function],
                "testStatus": "PASSING",
              },
              "key": null,
              "keys": null,
              "output": undefined,
              "parent": [Circular],
              "status": "DONE",
              "transient": undefined,
            },
            IsolateInstance {
              "$type": "Test",
              "abortController": AbortController {},
              "allowReorder": undefined,
              "children": null,
              "data": {
                "fieldName": "t4",
                "severity": "warning",
                "testFn": [Function],
                "testStatus": "WARNING",
              },
              "key": null,
              "keys": null,
              "output": undefined,
              "parent": [Circular],
              "status": "DONE",
              "transient": undefined,
            },
          ],
          "data": {
            "groupName": "g1",
            "tests": [],
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
        "status": "DONE",
        "transient": undefined,
      },
      IsolateInstance {
        "$type": "Test",
        "abortController": AbortController {},
        "allowReorder": undefined,
        "children": null,
        "data": {
          "fieldName": "t3",
          "severity": "error",
          "testFn": [Function],
          "testStatus": "PASSING",
        },
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": IsolateInstance {
          "$type": "Group",
          "abortController": null,
          "allowReorder": undefined,
          "children": [
            IsolateInstance {
              "$type": "Test",
              "abortController": AbortController {},
              "allowReorder": undefined,
              "children": null,
              "data": {
                "fieldName": "t2",
                "message": "t2 message",
                "severity": "error",
                "testFn": [Function],
                "testStatus": "FAILED",
              },
              "key": null,
              "keys": null,
              "output": undefined,
              "parent": [Circular],
              "status": "DONE",
              "transient": undefined,
            },
            [Circular],
            IsolateInstance {
              "$type": "Test",
              "abortController": AbortController {},
              "allowReorder": undefined,
              "children": null,
              "data": {
                "fieldName": "t4",
                "severity": "warning",
                "testFn": [Function],
                "testStatus": "WARNING",
              },
              "key": null,
              "keys": null,
              "output": undefined,
              "parent": [Circular],
              "status": "DONE",
              "transient": undefined,
            },
          ],
          "data": {
            "groupName": "g1",
            "tests": [],
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
        "status": "DONE",
        "transient": undefined,
      },
      IsolateInstance {
        "$type": "Test",
        "abortController": AbortController {},
        "allowReorder": undefined,
        "children": null,
        "data": {
          "fieldName": "t4",
          "severity": "warning",
          "testFn": [Function],
          "testStatus": "WARNING",
        },
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": IsolateInstance {
          "$type": "Group",
          "abortController": null,
          "allowReorder": undefined,
          "children": [
            IsolateInstance {
              "$type": "Test",
              "abortController": AbortController {},
              "allowReorder": undefined,
              "children": null,
              "data": {
                "fieldName": "t2",
                "message": "t2 message",
                "severity": "error",
                "testFn": [Function],
                "testStatus": "FAILED",
              },
              "key": null,
              "keys": null,
              "output": undefined,
              "parent": [Circular],
              "status": "DONE",
              "transient": undefined,
            },
            IsolateInstance {
              "$type": "Test",
              "abortController": AbortController {},
              "allowReorder": undefined,
              "children": null,
              "data": {
                "fieldName": "t3",
                "severity": "error",
                "testFn": [Function],
                "testStatus": "PASSING",
              },
              "key": null,
              "keys": null,
              "output": undefined,
              "parent": [Circular],
              "status": "DONE",
              "transient": undefined,
            },
            [Circular],
          ],
          "data": {
            "groupName": "g1",
            "tests": [],
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
        "status": "DONE",
        "transient": undefined,
      },
      IsolateInstance {
        "$type": "Test",
        "abortController": null,
        "allowReorder": undefined,
        "children": null,
        "data": {
          "fieldName": "t5",
          "severity": "error",
          "testFn": [Function],
          "testStatus": "SKIPPED",
        },
        "key": null,
        "keys": null,
        "output": undefined,
        "parent": [Circular],
        "status": "DONE",
        "transient": undefined,
      },
      IsolateInstance {
        "$type": "Test",
        "abortController": AbortController {},
        "allowReorder": undefined,
        "children": null,
        "data": {
          "fieldName": "t6",
          "severity": "error",
          "testFn": [Function],
          "testStatus": "FAILED",
        },
        "key": "a",
        "keys": null,
        "output": undefined,
        "parent": IsolateInstance {
          "$type": "Each",
          "abortController": null,
          "allowReorder": true,
          "children": [
            [Circular],
            IsolateInstance {
              "$type": "Test",
              "abortController": AbortController {},
              "allowReorder": undefined,
              "children": null,
              "data": {
                "fieldName": "t6",
                "severity": "error",
                "testFn": [Function],
                "testStatus": "FAILED",
              },
              "key": "b",
              "keys": null,
              "output": undefined,
              "parent": [Circular],
              "status": "DONE",
              "transient": undefined,
            },
          ],
          "data": {
            "tests": [],
          },
          "key": null,
          "keys": {
            "a": [Circular],
            "b": IsolateInstance {
              "$type": "Test",
              "abortController": AbortController {},
              "allowReorder": undefined,
              "children": null,
              "data": {
                "fieldName": "t6",
                "severity": "error",
                "testFn": [Function],
                "testStatus": "FAILED",
              },
              "key": "b",
              "keys": null,
              "output": undefined,
              "parent": [Circular],
              "status": "DONE",
              "transient": undefined,
            },
          },
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
        "status": "DONE",
        "transient": undefined,
      },
      IsolateInstance {
        "$type": "Test",
        "abortController": AbortController {},
        "allowReorder": undefined,
        "children": null,
        "data": {
          "fieldName": "t6",
          "severity": "error",
          "testFn": [Function],
          "testStatus": "FAILED",
        },
        "key": "b",
        "keys": null,
        "output": undefined,
        "parent": IsolateInstance {
          "$type": "Each",
          "abortController": null,
          "allowReorder": true,
          "children": [
            IsolateInstance {
              "$type": "Test",
              "abortController": AbortController {},
              "allowReorder": undefined,
              "children": null,
              "data": {
                "fieldName": "t6",
                "severity": "error",
                "testFn": [Function],
                "testStatus": "FAILED",
              },
              "key": "a",
              "keys": null,
              "output": undefined,
              "parent": [Circular],
              "status": "DONE",
              "transient": undefined,
            },
            [Circular],
          ],
          "data": {
            "tests": [],
          },
          "key": null,
          "keys": {
            "a": IsolateInstance {
              "$type": "Test",
              "abortController": AbortController {},
              "allowReorder": undefined,
              "children": null,
              "data": {
                "fieldName": "t6",
                "severity": "error",
                "testFn": [Function],
                "testStatus": "FAILED",
              },
              "key": "a",
              "keys": null,
              "output": undefined,
              "parent": [Circular],
              "status": "DONE",
              "transient": undefined,
            },
            "b": [Circular],
          },
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
          "transient": undefined,
        },
        "status": "DONE",
        "transient": undefined,
      },
    ],
  },
  "key": null,
  "keys": null,
  "output": {
    "dump": [Function],
    "errorCount": 4,
    "errors": [
      SummaryFailure {
        "fieldName": "t1",
        "groupName": undefined,
        "message": undefined,
      },
      SummaryFailure {
        "fieldName": "t2",
        "groupName": "g1",
        "message": "t2 message",
      },
      SummaryFailure {
        "fieldName": "t6",
        "groupName": undefined,
        "message": undefined,
      },
      SummaryFailure {
        "fieldName": "t6",
        "groupName": undefined,
        "message": undefined,
      },
    ],
    "getError": [Function],
    "getErrors": [Function],
    "getErrorsByGroup": [Function],
    "getInfo": [Function],
    "getInfoByGroup": [Function],
    "getMessage": [Function],
    "getSuccesses": [Function],
    "getSuccessesByGroup": [Function],
    "getWarning": [Function],
    "getWarnings": [Function],
    "getWarningsByGroup": [Function],
    "groups": {
      "g1": {
        "t2": SummaryBase {
          "errorCount": 1,
          "errors": [
            "t2 message",
          ],
          "info": [],
          "infoCount": 0,
          "pendingCount": 0,
          "successCount": 0,
          "successes": [],
          "testCount": 1,
          "valid": false,
          "warnCount": 0,
          "warnings": [],
        },
        "t3": SummaryBase {
          "errorCount": 0,
          "errors": [],
          "info": [],
          "infoCount": 0,
          "pendingCount": 0,
          "successCount": 0,
          "successes": [],
          "testCount": 1,
          "valid": true,
          "warnCount": 0,
          "warnings": [],
        },
        "t4": SummaryBase {
          "errorCount": 0,
          "errors": [],
          "info": [],
          "infoCount": 0,
          "pendingCount": 0,
          "successCount": 0,
          "successes": [],
          "testCount": 1,
          "valid": true,
          "warnCount": 1,
          "warnings": [],
        },
      },
    },
    "hasErrors": [Function],
    "hasErrorsByGroup": [Function],
    "hasInfo": [Function],
    "hasInfoByGroup": [Function],
    "hasSuccesses": [Function],
    "hasSuccessesByGroup": [Function],
    "hasWarnings": [Function],
    "hasWarningsByGroup": [Function],
    "info": [],
    "infoCount": 0,
    "isPending": [Function],
    "isTested": [Function],
    "isValid": [Function],
    "isValidByGroup": [Function],
    "issues": [
      {
        "message": "t2 message",
        "path": [
          "t2",
        ],
      },
    ],
    "pendingCount": 0,
    "successCount": 0,
    "successes": [],
    "testCount": 6,
    "tests": {
      "t1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "info": [],
        "infoCount": 0,
        "pendingCount": 0,
        "successCount": 0,
        "successes": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "t2": SummaryBase {
        "errorCount": 1,
        "errors": [
          "t2 message",
        ],
        "info": [],
        "infoCount": 0,
        "pendingCount": 0,
        "successCount": 0,
        "successes": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "t3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "info": [],
        "infoCount": 0,
        "pendingCount": 0,
        "successCount": 0,
        "successes": [],
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
      "t4": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "info": [],
        "infoCount": 0,
        "pendingCount": 0,
        "successCount": 0,
        "successes": [],
        "testCount": 1,
        "valid": true,
        "warnCount": 1,
        "warnings": [],
      },
      "t5": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "info": [],
        "infoCount": 0,
        "pendingCount": 0,
        "successCount": 0,
        "successes": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "t6": {
        "errorCount": 2,
        "errors": [],
        "info": [],
        "infoCount": 0,
        "pendingCount": 0,
        "successCount": 0,
        "successes": [],
        "testCount": 2,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "types": undefined,
    "valid": false,
    "warnCount": 1,
    "warnings": [
      SummaryFailure {
        "fieldName": "t4",
        "groupName": "g1",
        "message": undefined,
      },
    ],
  },
  "parent": null,
  "status": "DONE",
  "transient": undefined,
}
`;

exports[`useLoadSuite > Calling useLoadSuite should resume from loaded state 2`] = `
{
  "dump": [Function],
  "errorCount": 4,
  "errors": [
    SummaryFailure {
      "fieldName": "t1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "t2",
      "groupName": "g1",
      "message": "t2 message",
    },
    SummaryFailure {
      "fieldName": "t6",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "t6",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getInfo": [Function],
  "getInfoByGroup": [Function],
  "getMessage": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "t2": SummaryBase {
        "errorCount": 1,
        "errors": [
          "t2 message",
        ],
        "info": [],
        "infoCount": 0,
        "pendingCount": 0,
        "successCount": 0,
        "successes": [],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "t3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "info": [],
        "infoCount": 0,
        "pendingCount": 0,
        "successCount": 0,
        "successes": [],
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
      "t4": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "info": [],
        "infoCount": 0,
        "pendingCount": 0,
        "successCount": 0,
        "successes": [],
        "testCount": 1,
        "valid": true,
        "warnCount": 1,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasInfo": [Function],
  "hasInfoByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "info": [],
  "infoCount": 0,
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [
    {
      "message": "t2 message",
      "path": [
        "t2",
      ],
    },
  ],
  "pendingCount": 0,
  "successCount": 0,
  "successes": [],
  "testCount": 6,
  "tests": {
    "t1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "info": [],
      "infoCount": 0,
      "pendingCount": 0,
      "successCount": 0,
      "successes": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "t2": SummaryBase {
      "errorCount": 1,
      "errors": [
        "t2 message",
      ],
      "info": [],
      "infoCount": 0,
      "pendingCount": 0,
      "successCount": 0,
      "successes": [],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "t3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "info": [],
      "infoCount": 0,
      "pendingCount": 0,
      "successCount": 0,
      "successes": [],
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
    "t4": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "info": [],
      "infoCount": 0,
      "pendingCount": 0,
      "successCount": 0,
      "successes": [],
      "testCount": 1,
      "valid": true,
      "warnCount": 1,
      "warnings": [],
    },
    "t5": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "info": [],
      "infoCount": 0,
      "pendingCount": 0,
      "successCount": 0,
      "successes": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "t6": {
      "errorCount": 2,
      "errors": [],
      "info": [],
      "infoCount": 0,
      "pendingCount": 0,
      "successCount": 0,
      "successes": [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 1,
  "warnings": [
    SummaryFailure {
      "fieldName": "t4",
      "groupName": "g1",
      "message": undefined,
    },
  ],
}
`;
